AC_INIT([record], [0.1], [https://github.com/Maloux1/record.git])

AM_INIT_AUTOMAKE([-Wall])

AC_PROG_CC

AM_PROG_AR([])

LT_INIT

AC_CHECK_HEADER([unistd.h])
AC_CHECK_HEADER([string.h])
AC_CHECK_HEADER([errno.h])
AC_CHECK_HEADER([stdio.h])
AC_CHECK_HEADER([time.h])



AC_CONFIG_HEADERS([src/config.h])

AC_CONFIG_FILES([
src/Makefile
Makefile
])

AC_OUTPUT
